# tranquility

./: CMakeLists.txt  tranquility.pro
doc/: about.txt  build.txt
fenestra/: application.cpp  application.h  client.cpp  client.h  fenestra.pro  frame.cpp  frame.h  frame.ui  main.cpp
sol/: sol.pro
sol/client/: application.cpp  application.h  client.pro  clientwidget.ui  clientwindow.cpp  clientwindow.h  main.cpp
sol/manager/: clientprocess.cpp  clientprocess.h  main.cpp  mainwindow.cpp  mainwindow.h  manager.pro
src/: CMakeLists.txt
src/fenestra/: CMakeLists.txt  application.cpp  application.h  client.cpp  client.h  frame.cpp  main.cpp
